# AcSmuthi

./: LICENSE  N_spheres.py  README.md  classes.py  cross_sections.py  examples.py  fields.py  fields_expansions.py  forces.py  layers.py  linear_system.py  main.py  mathematics.py  medium.py  oldfunctions.py  oop_cross_sections.py  oop_fields.py  pair_of_spheres.py  particles.py  physical_systems.py  plane_one_sphere.py  postprocessing.py  pyproject.toml  reflection.py  rendering.py  run.py  simulation.py  spectrum_cross_section.py  spheres.py  sphrs.py  test lopes coefficients.py  tests.py  tsystem.py  two_spheres.py  wavefunctions.py  Отчёт.docx
OOP realization/: class realization.py  layers.py  linear_system.py  oop_cross_sections.py  oop_fields.py  oop_forces.py  particles.py  run.py
acsmuthi/: fields_expansions.py  initial_field.py  layers.py  linear_system.py  medium.py  particles.py  simulation.py
applications/: examples.py  final_results.py  forc_dist_3differ.py  force_dist.py  forces_antinode_2aerogelSW.csv  forces_dist_line2.py  forces_dist_line3.py  forces_node_2aerogelSW.csv  mie_kerk.py  multipole_spectrumcs.py  order1regime.py  order_dist2.py  order_tests.py  results.py  spec2differ.py  spec_3sph.py  spectrum_cross_section.py
elastic_spectrum/: 1gold_in_water.py  spec_check.py
outfiles/: bl_for_freq.csv  forces_dist_1big.csv  forces_dist_1big_angle.csv  forces_dist_norm.csv  spectrum_dist_ecs_forces.csv  spectrum_dist_ecs_forces_1.csv  spectrum_dist_ecs_forces_1big.csv  spectrum_dist_ecs_forces_angle_big.csv  spectrum_dist_freq.csv
(+333 files in other folders)
