[tool.poetry]
name = "acsmuthi"
version = "0.1.4"
description = ""
authors = ["Vsevolod Kleshchenko <k.vd@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
numpy = "1.24.2"
scipy = "1.10.1"
matplotlib = "3.7.0"
pywigxjpf = "^1.11"
cython = "^0.29.33"
setuptools = "^67.4.0"
pytest = "^7.2.2"
seaborn = "^0.12.2"
numba = "^0.58.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
